time to make tests

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
 firstName.notEmpty=First name can not be empty
 lastName.notEmpty=Last name can not be empty
-emails.notEmpty=email can not be empty
-phoneNumbers.notEmpty=phone number can not be empty
+mail.notEmpty=email can not be empty
+number.notEmpty=phone number can not be empty
